refactor: api struct to only fetch image via GET
