# docs/swagger.json
@@ -18,74 +18,6 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/extract_frame": {
-            "post": {
-                "description": "Extract Frame based on episode and frame number",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "extract"
-                ],
-                "summary": "Extract Frame",
-                "parameters": [
-                    {
-                        "description": "Extract Frame parameters",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ExtractFrameRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.ExtractFrameResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/extract_gif": {
-            "post": {
-                "description": "Extract GIF based on episode, start, and end",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "extract"
-                ],
-                "summary": "Extract GIF",
-                "parameters": [
-                    {
-                        "description": "Extract GIF parameters",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ExtractGIFRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.ExtractGIFResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/frame": {
             "get": {
                 "description": "Extract Frame as File based on episode and frame number",
@@ -93,7 +25,7 @@
                     "application/json"
                 ],
                 "produces": [
-                    "image/webp"
+                    "image/jpeg"
                 ],
                 "tags": [
                     "extract"
@@ -102,6 +34,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Video Name",
+                        "name": "video_name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "1",
                         "description": "Episode",
                         "name": "episode",
                         "in": "query",
@@ -137,8 +77,15 @@
                 "tags": [
                     "extract"
                 ],
-                "summary": "Extract GIF as File",
+                "summary": "Extract GIF",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Video Name",
+                        "name": "video_name",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Episode",
@@ -207,47 +154,6 @@
         }
     },
     "definitions": {
-        "models.ExtractFrameRequest": {
-            "type": "object",
-            "properties": {
-                "episode": {
-                    "type": "string"
-                },
-                "frame": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.ExtractFrameResponse": {
-            "type": "object",
-            "properties": {
-                "frame": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ExtractGIFRequest": {
-            "type": "object",
-            "properties": {
-                "end": {
-                    "type": "integer"
-                },
-                "episode": {
-                    "type": "string"
-                },
-                "start": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.ExtractGIFResponse": {
-            "type": "object",
-            "properties": {
-                "gif": {
-                    "type": "string"
-                }
-            }
-        },
         "models.SearchRequest": {
             "type": "object",
             "properties": {
@@ -262,6 +168,17 @@
                 },
                 "query": {
                     "type": "string"
+                },
+                "video_name": {
+                    "enum": [
+                        "Ave Mujica",
+                        "MyGO"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.VideoNameEnum"
+                        }
+                    ]
                 }
             }
         },
@@ -299,8 +216,22 @@
                 },
                 "text": {
                     "type": "string"
+                },
+                "video_name": {
+                    "type": "string"
                 }
             }
+        },
+        "models.VideoNameEnum": {
+            "type": "string",
+            "enum": [
+                "Ave Mujica",
+                "MyGO"
+            ],
+            "x-enum-varnames": [
+                "AveMujica",
+                "MyGO"
+            ]
         }
     }
 }
